--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>Analyzing Social Networks Data</name>
     <description>
-        This project is the capstone project of the Coursera
+        Warmup assignments in preparation for the capstone project of the Coursera
         "Object Oriented Java Programming: Data Structures and Beyond" specialization.
 
         It combines all of the skills from all four courses of the specialization to
@@ -39,18 +39,6 @@
             <artifactId>junit-platform-runner</artifactId>
             <version>${junit.platform.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- The Java Universal Network/Graph Framework dependencies -->
-        <dependency>
-            <groupId>net.sf.jung</groupId>
-            <artifactId>jung-api</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.jung</groupId>
-            <artifactId>jung-visualization</artifactId>
-            <version>2.1.1</version>
         </dependency>
     </dependencies>
 
